Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Comiclist : " />
+    <meta name="description" content="Weekly Comic List : " />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Comiclist</title>
+    <title>Weekly Comic List</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/adamcsills/ComicList">View on GitHub</a>
 
-          <h1 id="project_title">Comiclist</h1>
+          <h1 id="project_title">Weekly Comic List</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
@@ -31,10 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="comiclist" class="anchor" href="#comiclist"><span class="octicon octicon-link"></span></a>ComicList</h1>
-
-<p>This project reads the new comic feeds from <a href="http://www.comiclist.com">www.comiclist.com</a>, allows you to store the comics on your pull list,
+        <p>This project reads the new comic feeds from <a href="http://www.comiclist.com">www.comiclist.com</a>, allows you to store the comics on your pull list,
 and shows you on a per-week basis what comics you should expect. It also lets you browse available comics on a
 weekly basis, using historical lists. </p>
       </section>
@@ -43,7 +40,7 @@ weekly basis, using historical lists. </p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Comiclist maintained by <a href="https://github.com/adamcsills">adamcsills</a></p>
+        <p class="copyright">Weekly Comic List maintained by <a href="https://github.com/adamcsills">adamcsills</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
