Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <p>This project reads the new comic feeds from <a href="http://www.comiclist.com">www.comiclist.com</a>, allows you to store the comics on your pull list,
 and shows you on a per-week basis what comics you should expect. It also lets you browse available comics on a
 weekly basis, using historical lists. </p>
+
+<p>You can download and run the application from here:
+<a href="https://raw.githubusercontent.com/adamcsills/ComicList/master/ClickOnce/setup.exe">https://raw.githubusercontent.com/adamcsills/ComicList/master/ClickOnce/setup.exe</a></p>
+
+<p>Note that Internet Explorer may catch the file with the Smart Screen Filter. This is because the file is brand new and I'm the only one who's run it before.</p>
+
+<p><img src="https://raw.githubusercontent.com/adamcsills/ComicList/master/ClickOnce/screenshot.png" alt=""></p>
       </section>
     </div>
 
