Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ weekly basis, using historical lists. </p>
 <p>You can download and run the application from here:
 <a href="https://raw.githubusercontent.com/adamcsills/ComicList/master/ClickOnce/setup.exe">https://raw.githubusercontent.com/adamcsills/ComicList/master/ClickOnce/setup.exe</a></p>
 
-<p>Note that Internet Explorer may catch the file with the Smart Screen Filter. This is because the file is brand new and I'm the only one who's run it before.
+<p>Note that Windows may catch the file with the Smart Screen Filter. This is because the file is brand new and there are only a few users currently.
 <img src="https://raw.githubusercontent.com/adamcsills/ComicList/master/ClickOnce/Screenshot.png" alt=""></p>
       </section>
     </div>
